# duphunter

./: Dupfinder.py  Jenkinsfile  MANIFEST.in  MD5File.py  README.md  dupfinder  duphunter.spec  pyproject.toml  setup.cfg  setup.py  tox.ini
src/dupfinder/: __init__.py  dupfinder.ui
src/duphunter/: MD5File.py  __init__.py  dupfinder.ui  duphunter.ui
src/duphunter/applications/: duphunter.desktop
